# cloudevents/schemas/openapi.json
@@ -5134,7 +5134,12 @@
             "type": "array",
             "description": "Required, nonempty array of unique client roles: subscriber, consumer, or producer. The producer role MUST NOT be combined with another role. Only subscriber and consumer MAY be combined, and only for AMQP/1.0, MQTT/3.1.1, MQTT/5.0, or NATS. Domain validation MUST enforce these constraints.",
             "items": {
-              "type": "string"
+              "type": "string",
+              "enum": [
+                "subscriber",
+                "consumer",
+                "producer"
+              ]
             }
           },
           "channel": {
